--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
         </p>
       </div>
     </div> -->
-    <button type="button" class="load-more">Load more</button>
+    <button type="button" class="load-more" disabled >Load more</button>
 
 
   </body>
