button is not displayed on start

--- a/src/index.html
+++ b/src/index.html
@@ -23,28 +23,6 @@
     <div class="gallery">
       <!-- Image cards -->
     </div>
-
-    <!-- CARD MARKUP FOR SINGLE IMAGE TO BE USED IN SCRIPT  -->
-
-    <!-- <div class="photo-card">
-      <img src="" alt="" loading="lazy" />
-      <div class="info">
-        <p class="info-item">
-          <b>Likes</b>
-        </p>
-        <p class="info-item">
-          <b>Views</b>
-        </p>
-        <p class="info-item">
-          <b>Comments</b>
-        </p>
-        <p class="info-item">
-          <b>Downloads</b>
-        </p>
-      </div>
-    </div> -->
-    <button type="button" class="load-more" disabled >Load more</button>
-
-
+    <button type="button" class="load-more">Load more</button>
   </body>
 </html>
