--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
         autocomplete="off"
         placeholder="Search images..."
       />
-      <button type="submit">Search</button>
+      <button type="submit" disabled>Search</button>
     </form>
 
     <div class="gallery">
